fix: убрано дублирование селекторов, сделано расстояние между иконкой лайка и кнопкой в focus visible

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,10 +135,14 @@
 
 .button-wrapper {
   display: flex;
+  gap: 8px;
   flex-direction: row;
-  justify-self: center;
-  align-self: flex-end;
+  /* justify-self: center; */
+  /* align-self: flex-end; */
+  justify-content: end;
+  align-items: center;
   block-size: 38px;
+  /* height: fit-content; */
 }
 
 .content__section__card-description {
@@ -151,6 +155,9 @@
   border: 2px solid;
   border-color: var(--main-bg-color, #fff);
   background-color: transparent;
+  height: 37px;
+  padding: 0;
+  transition: border-color 0.3s ease;
 }
 
 .card__icon-button:focus {
@@ -169,12 +176,14 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 90%;
+  transition: box-shadow 0.3s ease;
 }
 
 .card__like-button {
   text-align: center;
   background-color: transparent;
   min-inline-size: 129px;
+  padding: 10px;
 }
 
 .button__text {
@@ -240,11 +249,6 @@
   padding: 12.5px 116.5px;
   background-color: transparent;
   text-transform: uppercase;
-}
-
-
-.button {
-  transition: box-shadow 0.3s ease;
 }
 
 /* focus */
